--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,2 +1,4 @@
 baseUrl = https://jsonplaceholder.typicode.com
 expectedUser5Json = src\\test\\resources\\userId5.json
+postsRequest = /posts/
+usersRequest = /users/
